--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,15 @@ body {
   padding: 20px;
 }
 
+.app__dropdown {
+  background-color: white;
+}
+
+.app__header > h1 {
+  color: #fc3c3c;
+  font-size: 2rem;
+}
+
 .app__header {
   display: flex;
   justify-content: space-between;
@@ -27,6 +36,25 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.app__right {
+  display: flex;
+  flex-direction: column;
+}
+
+.app__right .MuiCardContent-root {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.app__graph {
+  flex: 1;
+}
+
+.app__graphTitle {
+  margin-top: 10px;
 }
 
 @media (max-width: 990px) {
